--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "sumo",
   "version": "1.0.0",
   "description": "チキチキ！週末プログラミングでどれくらいのゲームが作れるのかチャレンジ！ 笑いたきゃ笑え。",
-  "main": "index.js",
+  "main": "sumo_server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node sumo_server.js &"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/KentoSawaya/sumo#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "socket.io": "^2.3.0"
   }
 }
